--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<module>auth</module>
 		<module>gateway</module>
 		<module>test-microservice</module>
+		<module>user-service</module>
 	</modules>
 
 </project>
