- add swagger 2 - add eureka discovery - integration tests user-service

--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,8 @@
 	</dependencyManagement>
 
 	<modules>
-		<module>auth</module>
 		<module>gateway</module>
-		<module>test-microservice</module>
+		<module>discovery</module>
 		<module>user-service</module>
 	</modules>
 
