--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,17 +1,23 @@
 server:
   port: 9595
 
+spring:
+  application:
+    name: gateway
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
+
 zuul:
   routes:
-    user:
-      path: /user/**
-      url: http://localhost:8787/user
-    docs:
-        path: /pomelos_docs/**
-        url: http://192.168.7.73:80/pomelos_docs
-    doc_test:
-      path: /doc_test/**
-      url: http://localhost:9000
+    user-service:
+      path: /user-service/**
+      serviceId: user-service
 
 logging:
   level:
